<resources>
    <string name="title_activity_contas_pagar">ContasPagarActivity</string>
    <string name="title_activity_filial">Filiais</string>
    <string name="title_activity_main"> </string>
    <string name="title_activity_vendas">Vendas</string>
    <string name="title_activity_tanques">Tanques</string>
    <string name="title_activity_troca_preco">Troca de Preço</string>
    <string name="title_activity_projecao_abastecimento">Projeção de Abastecimento</string>
    <string name="title_activity_notificacoes">Notificações</string>
    <string name="title_activity_troca_preco_enviar"> </string>
    <string name="title_activity_contas_receber">Contas a Receber</string>
    <string name="title_activity_login">Seja Bem-vindo</string>
    <string name="title_pagar_titulo">Títulos</string>
    <string name="title_pagar_cheques">Cheques</string>
    <string name="title_receber_titulo">Titulos</string>
    <string name="title_receber_cheques">Cheques</string>
    <string name="title_receber_carta_frete">Cartas Frete</string>
    <string name="title_receber_cartao">Cartão</string>

    <string name="gcm_defaultSenderId">1062651524124</string>
    <string name="serial_id_server">webpostoandroid</string>
    <string name="dispositivo_sem_google_play_services">Seu dispositivo não possui suporte ao Google Play Services. Este é obrigatório.</string>

    <string name="app_name">WebPosto</string>
    <string name="text_login">Usuário</string>
    <string name="text_senha">Senha</string>
    <string name="login_button">Login</string>

    <string name="title_tab_venda_hoje">Hoje</string>
    <string name="title_tab_venda_5">5 Dias</string>
    <string name="title_tab_venda_15">15 Dias</string>
    <string name="title_tab_venda_30">30 Dias</string>

    <string name="title_financeiro">Financeiro</string>
    <string name="text_contas_pagar">Contas a Pagar</string>
    <string name="text_contas_receber">Contas a Receber</string>

    <string name="title_movimento">Movimento</string>
    <string name="text_vendas">Vendas</string>
    <string name="text_tanques">Tanques</string>
    <string name="text_troca_preco">Troca de Preço</string>
    <string name="text_projecao_abastecimento">Projeção de Abastecimento</string>
    <string name="text_notificacoes">Notificações</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="produto"></string>
    <string name="valor"></string>
    <string name="volume"></string>
    <string name="radio_inicio_turno">Início de Turno</string>
    <string name="radio_programado">Programado</string>

    <string-array name="turnos">
        <item>1º Turno</item>
        <item>2º Turno</item>
        <item>3º Turno</item>
        <item>4º Turno</item>
    </string-array>

    <string name="menu_enviar_troca_preco">Enviar</string>
    <string name="menu_troca_preco">Programar</string>
    <string name="load">Aguarde...</string>
    <string name="intervalo_invalido">Intervalo Inválido</string>
    <string name="dados_invalidos">Dados Inválidos</string>
    <string name="title_lista_cliente">Clientes</string>
</resources>
