<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:animationCache="true"
    android:alwaysDrawnWithCache="true"
    android:persistentDrawingCache="all"
    android:background="@color/qualityButton"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/produto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:layout_marginLeft="10dp"
            android:text="@string/valor" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:layout_marginRight="10dp"
            android:gravity="right|end"
            android:text="@string/volume" />
    </LinearLayout>
</LinearLayout>
